Corrections des erreurs dans le W3C validator et mise en forme version mobile pour 320px réussie

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
 body {
   margin: 0px;
   font-family: "Roboto", sans-serif;
+  min-width: 320px;
 }
 
 header {
@@ -56,13 +57,13 @@ header {
   padding-top: 40px;
   font-size: 24px;
   font-weight: 700;
-  padding-inline: 50px;
+  padding-inline: 44px;
 }
 .explorer_restaurants p {
   font-size: 18px;
   margin-bottom: 27px;
   font-weight: 300;
-  padding-inline: 25px;
+  padding-inline: 6px;
 }
 .explorer_restaurants button {
   font-size: 16px;
@@ -94,6 +95,7 @@ header {
   display: flex;
   justify-content: center;
   background-color: white;
+  min-width: 320px;
 }
 .fonctionnement_container h2 {
   margin-top: 48px;
@@ -104,7 +106,10 @@ header {
   counter-reset: steps;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 68px;
+  width: 100%;
 }
 .fonctionnement_container .fonctionnement ol {
   display: flex;
@@ -112,22 +117,24 @@ header {
   justify-content: center;
   gap: 40px;
   position: relative;
-  padding-right: 25px;
   transition: opacity 0.2s ease;
   transition: box-shadow 0.2s ease;
+  width: 100%;
+  max-width: 430px;
+  padding-right: 10px;
 }
 .fonctionnement_container .fonctionnement ol .liste_fonctionnement:hover {
   opacity: 0.8;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.4);
 }
 .fonctionnement_container .fonctionnement li {
+  width: 100%;
   background-color: rgb(246, 246, 246);
   padding: 28px 28px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
   font-weight: 500;
   font-size: 16px;
-  width: 325px;
   height: 75px;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   display: flex;
@@ -168,19 +175,31 @@ header {
 @media screen and (min-width: 1080px) {
   .fonctionnement_container .fonctionnement ol {
     flex-direction: row;
+    width: 80%;
+    max-width: none;
   }
   .fonctionnement_container .fonctionnement li::before {
     position: relative;
     left: -40px;
   }
 }
+@media screen and (max-width: 550px) {
+  .fonctionnement_container .fonctionnement {
+    display: block;
+  }
+}
 .section_restaurants {
   display: flex;
   justify-content: center;
   background-color: #f6f6f6;
+  min-width: 320px;
 }
 .section_restaurants .restaurants_container {
+  display: flex;
+  flex-direction: column;
   padding-bottom: 66px;
+  width: 100%;
+  padding-inline: 18px;
 }
 .section_restaurants .restaurants_container h2 {
   padding-top: 55px;
@@ -210,7 +229,8 @@ header {
   font-weight: 500;
 }
 .section_restaurants .restaurants_container .cards_container .restaurant_card {
-  width: 340px;
+  max-width: 1130px;
+  width: 100%;
   height: 250px;
   text-decoration: none;
   color: black;
@@ -287,7 +307,10 @@ header {
 }
 
 /* MEDIA QUERIES DESKTOP */
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 1140px) {
+  .section_restaurants .restaurants_container {
+    width: auto;
+  }
   .section_restaurants .restaurants_container h2 {
     margin-left: 50px;
   }
@@ -365,7 +388,7 @@ footer .text_footer i {
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: hide 0s 2s forwards; /* Animation du spinner */
+  animation: hide 0s 2s forwards;
   background-color: white;
   opacity: 0.7;
 }
