--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,4 +7,5 @@
 body {
   margin: 0px;
   font-family: "Roboto", sans-serif;
+  min-width:320px;
 }
