--- a/sass/components/_restaurants_container.scss
+++ b/sass/components/_restaurants_container.scss
@@ -3,9 +3,14 @@
   display: flex;
   justify-content: center;
   background-color: #f6f6f6;
+  min-width: 320px;
 
   & .restaurants_container {
+    display: flex;
+    flex-direction: column;
     padding-bottom: 66px;
+    width:100%;
+    padding-inline:18px;
     & h2 {
       padding-top: 55px;
       margin-top: 0px;
@@ -34,7 +39,8 @@
         font-weight: 500;
       }
       .restaurant_card {
-        width: 340px;
+        max-width: 1130px;
+        width: 100%;
         height: 250px;
         text-decoration: none;
         color: black;
@@ -120,9 +126,10 @@
 }
 /* MEDIA QUERIES DESKTOP */
 
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 1140px) {
   .section_restaurants {
     & .restaurants_container {
+      width:auto;
       & h2 {
         margin-left: 50px;
       }
