--- a/sass/layouts/_explorer.scss
+++ b/sass/layouts/_explorer.scss
@@ -10,13 +10,13 @@
     padding-top: 40px;
     font-size: 24px;
     font-weight: 700;
-    padding-inline: 50px;
+    padding-inline: 44px;
   }
   & p {
     font-size: 18px;
     margin-bottom: 27px;
     font-weight: 300;
-    padding-inline: 25px;
+    padding-inline: 6px;
   }
   & button {
     font-size: 16px;
